# awesome-simple-and-reliable

./: CMakeLists.txt  README.md  main.cpp
c++/: base64.cpp  base64.h  csv.cpp  csv.h  dateutil.cpp  dateutil.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sha2.cpp  sha2.h  strutil.cpp  strutil.h  utf8util.cpp  utf8util.h
xml/pugixml-1.7/contrib/: foreach.hpp
xml/pugixml-1.7/docs/: manual.html  quickstart.html
xml/pugixml-1.7/docs/samples/: character.xml  custom_memory_management.cpp  include.cpp  load_error_handling.cpp  load_file.cpp  load_memory.cpp  load_options.cpp  load_stream.cpp  modify_add.cpp  modify_base.cpp  modify_remove.cpp  save_custom_writer.cpp  save_declaration.cpp  save_file.cpp  save_options.cpp  save_stream.cpp  save_subtree.cpp  text.cpp  transitions.xml  traverse_base.cpp  traverse_iter.cpp  traverse_predicate.cpp  traverse_rangefor.cpp  traverse_walker.cpp  tree.xml  weekly-shift_jis.xml  weekly-utf-16.xml  weekly-utf-8.xml  xgconsole.xml  xpath_error.cpp  xpath_query.cpp  xpath_select.cpp  xpath_variables.cpp
xml/pugixml-1.7/src/: pugixml.cpp  pugixml.hpp
